# pyramid-mod-template

./: .dockerignore  .gitattributes  .gitignore  AUTHORS.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  development-docker.ini  docker-compose.yml  pyproject.toml  ruff.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.dev.yml  postCreateCommand.sh
.github/workflows/: action.yml
.template/: README.md  requirements.txt
.template/render/: cookiecutter.json  cookiecutter.replay.json  render.py  render.sh
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: openapi.yml
src/: __init__.py  routes.py
src/templates/: home.pug
src/views/: __init__.py  home.py
tests/: conftest.py  test_functional.py  testing.ini
