[project]
name = "{{cookiecutter.project_repo}}"
dynamic = ["version"]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyramid>=2.0.2",
    "pyramid-mod-accounts",
    "pyramid-mod-baseview>=4.0.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "coverage-badge>=1.1.2",
    "faker>=33.1.0",
    "lxml>=5.3.0",
    "mock>=5.1.0",
    "mypy>=1.14.1",
    "openapi-core>=0.19.4",
    "pyramid-debugtoolbar>=4.12.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-split>=0.10.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.8.5",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sqlalchemy-stubs>=0.4",
    "types-mock>=5.1.0.20240425",
    "types-paramiko>=3.5.0.20240928",
    "types-pkg-resources>=0.1.3",
    "types-python-dateutil>=2.9.0.20241206",
    "types-pytz>=2024.2.0.20241221",
    "types-requests>=2.32.0.20241016",
    "types-toml>=0.10.8.20240310",
    "webtest>=3.0.2",
    "wheel>=0.45.1",
]

[project.scripts]

[project.entry-points."paste.app_factory"]
main = "pyramid-mod-otel:main"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = [
  "--cov=pyramid-mod-otel",
  "--cov-config=pyproject.toml",
  "--cov-context=test",
]
filterwarnings =[ 
    # TODO: Remove once packages have solved their warnings

    ## pyramid_mod_accounts uses dict-like access to the return value of validate_email, which is deprecated
    "ignore:dict-like access to the return value of validate_email is deprecated.*:DeprecationWarning:pyramid_mod_accounts.models",

    ## Pylons' Pyramid uses pkg_resources, which is deprecated (https://github.com/Pylons/pyramid/issues/3731)
    "ignore:.*pkg_resources.*:DeprecationWarning",

    ## Pylons' webtest calls load_module, which is deprecated (https://github.com/Pylons/webtest)
    "ignore:the load_module() method is deprecated.*:DeprecationWarning:importlib._bootstrap",

    ## Pyramid's resource path using .. is deprecated
    "ignore:Use of \\.\\.  or absolute path in a resource path is not allowed.*:DeprecationWarning:pyramid.path",

    ## sqlalchemy_eventsourcing does not add Command and Event objects to session
    "ignore:Object of type <Command> not in session.*:sqlalchemy.exc.SAWarning",
    "ignore:Object of type <Event> not in session.*:sqlalchemy.exc.SAWarning",
]

norecursedirs = [
  "docs",
  "*.egg-info",
  ".git",
  ".tox",
]

[tool.coverage.run]
branch = true
source = ["pyramid-mod-otel"]
omit = ["pyramid-mod-otel/tests*"]

[tool.coverage.report]
ignore_errors = true
skip_empty = true

[tool.coverage.html]
show_contexts = true

[[tool.uv.index]]
url = "https://pkgs.dev.azure.com/VanOord-IT/VanOord_Artifacts/_packaging/VanOord_Artifacts/pypi/simple/"
